ko/15.9/config/security-virtual-host.rst
========
가상 호스트
========

가상 호스트에 대하여
==============

|Fess| 에 접근했을 때의 호스트명(HTTP의 ``Host`` 헤더 값)에 따라 검색 결과를 구분할 수 있습니다.
한 대의 |Fess| 서버를 여러 호스트명으로 공개하여, 호스트명마다 다른 검색 대상(크롤 설정)이나 페이지 디자인을 제공할 수 있습니다.
검색 화면의 외관도 호스트마다 다르게 할 수 있습니다. 가상 호스트명과 이름이 일치하는 정적 테마가 해당 호스트에 사용됩니다.

가상 호스트 기능은 기본적으로 비활성화(미설정) 상태입니다. 아래 절차에 따라 설정합니다.

시스템 설정
----------

:doc:`관리자 가이드 > 전반 설정 <../admin/general-guide>` 의 "가상 호스트"에서 접근 시의 호스트명과 가상 호스트명의 대응을 설정합니다. 여기서 설정한 가상 호스트명을 크롤 설정에서 지정합니다.

**형식**

1행에 1개의 가상 호스트를 다음 형식으로 기술합니다.

::

   헤더명:헤더값=가상호스트명

.. list-table::

   * - *헤더명*
     - 판정에 사용할 HTTP 요청 헤더의 이름. 일반적으로는 ``Host`` 를 지정합니다. 리버스 프록시를 경유하여 접근하는 경우 등에는 ``X-Forwarded-Host`` 를 지정할 수도 있습니다.
   * - *헤더값*
     - 위 헤더에 포함되는 호스트명(필요에 따라 ``호스트명:포트번호`` 형식). 접근 시 클라이언트가 전송하는 헤더 값과 완전 일치(대소문자 구분 없음)하는 경우에 이 가상 호스트가 적용됩니다.
   * - *가상호스트명*
     - 크롤 설정에서 지정하는 가상 호스트명

**예**

::

   Host:abc.example.com=host1
   Host:192.168.1.123:8080=host2

.. note::

   판정은 호스트명의 이름 확인(DNS)이 아닌 요청 헤더 값과의 문자열 일치로 수행됩니다.
   브라우저가 전송하는 ``Host`` 헤더에는, 표준 포트(HTTP는 80, HTTPS는 443)로 접근한 경우 포트 번호가 포함되지 않으며, 그 외 포트로 접근한 경우에는 ``호스트명:포트번호`` 형식으로 포트 번호가 포함됩니다.
   따라서 표준 포트 이외로 공개하는 경우에는 ``Host:abc.example.com:8080=host1`` 과 같이 포트 번호까지 포함하여 지정하십시오.

.. note::

   가상 호스트명에는 영숫자와 밑줄( ``a-z`` , ``A-Z`` , ``0-9`` , ``_`` )만 사용할 수 있습니다.
   그 외의 문자는 자동으로 제거됩니다.

   또한 다음 이름은 예약되어 있어 가상 호스트명으로 사용할 수 없습니다:
   ``admin`` , ``common`` , ``error`` , ``login`` , ``profile``

가상 호스트별 페이지 디자인
---------------------------

가상 호스트에 전용 검색 화면을 제공하려면, ``theme.yml`` 의 ``name`` 이 가상 호스트명을 소문자로 한 것(예: ``host1`` )인 정적 테마를 설치합니다.
가상 호스트에 일치하는 요청에는 그 테마가 사용되고, 그 외의 요청에는 기본 테마가 사용됩니다.
이 테마를 기본 테마로 설정할 필요는 없습니다. 번들 테마로부터 테마를 만드는 방법은 :ref:`theme-customize-bundled` 를, 설치 방법은 :doc:`../admin/theme-guide` 를 참조하십시오.

.. note::

   설정을 저장하면 여전히 ``WEB-INF/view/가상호스트명`` 에 JSP가 생성되지만, |Fess| 15.9 부터 검색 화면은 이를 사용하지 않습니다.
   이 JSP로 표시되는 것은 로그인 화면( ``/login/`` )뿐입니다.


크롤 설정
---------

웹 크롤 설정, 파일 크롤 설정, 데이터 스토어 크롤 설정 중 하나에서 "가상 호스트"를 지정합니다.
"가상 호스트"는 시스템 설정에서 설정한 가상 호스트명 중 하나를 지정합니다. 1개의 크롤 설정에 여러 가상 호스트를 지정할 수도 있습니다(1행에 1개).

가상 호스트로 접근한 검색에서는, 해당 가상 호스트가 지정된 크롤 설정의 문서만 검색 결과에 표시됩니다.
어떤 가상 호스트에도 일치하지 않는 접근(가상 호스트가 미설정인 일반 접근)에서는 이 필터링이 적용되지 않아 평소와 같이 모든 검색 결과가 표시됩니다.

**예**

.. list-table::

   * - *가상 호스트*
     - ``host1``
